--- a/Spring_Boot_Jsp_1/src/main/resources/templates/employee.html
+++ b/Spring_Boot_Jsp_1/src/main/resources/templates/employee.html
@@ -25,7 +25,7 @@
 			</tr>
 		</table>
 		<br></br>
-		<a href="http://localhost:9091/employee/">Back to Employee List</a>
+		<a href="http://localhost:9091/employees/">Back to Employee List</a>
 	</div>
 </body>
 </html>
