Added Spring Boot Security

--- a/Spring_Boot_Jsp_1/src/main/resources/templates/index.html
+++ b/Spring_Boot_Jsp_1/src/main/resources/templates/index.html
@@ -8,6 +8,9 @@
 	<div>
 		<h1 th:text="${title}" align="center" style="color: blue;"></h1>
 	</div>
+	<div align="right">
+		<h4 th:text="${userName}">Welcome...</h4>
+	</div>
 	<hr></hr>
 	<div id="emp-details" align="center">
 		<table>
