--- a/Spring_Boot_Jsp_1/src/main/resources/templates/employee.html
+++ b/Spring_Boot_Jsp_1/src/main/resources/templates/employee.html
@@ -8,6 +8,9 @@
 	<div>
 		<h1 th:text="${title}" align="center" style="color: blue;"></h1>
 	</div>
+	<div align="right">
+		<h4 th:text="${userName}"></h4>
+	</div>
 	<hr></hr>
 	<div align="center">
 		<table>
